--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ nav {
 
 h2 {
     width: 425px;
-    height: 495px;
+    height: 350px;
     background-color: white;
     padding: 15px;
     margin: 10px;
@@ -44,7 +44,7 @@ h2 {
 
 h3 {
     width: 425px;
-    height: 495px;
+    height: 350px;
     background-color: white;
     padding: 15px;
     margin: 10px;
@@ -59,6 +59,7 @@ h5 {
     box-align: center;
     background-color: white;
     padding: 15px;
+    margin: 10px;
     border-style: 1px solid #777;
     float: center;
     text-align: center;
