--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+*{
+    box-sizing: border-box;
+    text-align: center;
+}
+
 body {
     font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
      color: #777;
@@ -17,7 +22,6 @@ h1 {
     padding: 15px;
     border-style: 1px solid #777;
     float: center;
-    text-align: center;
 }
 
 nav {
@@ -28,10 +32,9 @@ nav {
     padding: 15px;
     border-style: 1px solid #777;
     float: center;
-    text-align: center;
 }
 
-h2 {
+section {
     width: 425px;
     height: 350px;
     background-color: white;
@@ -39,10 +42,9 @@ h2 {
     margin: 10px;
     border-style: 1px solid #777;
     float: left;
-    text-align: center;
 }
 
-h3 {
+aside {
     width: 425px;
     height: 350px;
     background-color: white;
@@ -50,10 +52,24 @@ h3 {
     margin: 10px;
     border-style: 1px solid #777;
     float: right;
-    text-align: center;
 }
 
-h5 {
+article {
+    height: 200px;
+    width: 200px;
+    background-color: #777;
+    border-style: 1px solid white;
+}
+
+#clearfix::after {
+    content: "";
+    display: block;
+    clear: both;
+}
+
+/* I am getting stuck on the boxes in the article.  I know that is has something to do with positioning or display, but I cannot seem to get the code to match the layout image.   */
+
+footer {
     width: 960px;
     height: 50px;
     box-align: center;
@@ -62,5 +78,4 @@ h5 {
     margin: 10px;
     border-style: 1px solid #777;
     float: center;
-    text-align: center;
 }
