--- a/style.css
+++ b/style.css
@@ -32,10 +32,11 @@ nav {
     padding: 15px;
     border-style: 1px solid #777;
     float: center;
+    clear: both;
 }
 
 section {
-    width: 425px;
+    width: 400px;
     height: 350px;
     background-color: white;
     padding: 15px;
@@ -45,7 +46,7 @@ section {
 }
 
 aside {
-    width: 425px;
+    width: 400px;
     height: 350px;
     background-color: white;
     padding: 15px;
@@ -55,16 +56,22 @@ aside {
 }
 
 article {
-    height: 200px;
-    width: 200px;
+    width: 365px;
+    height: 300px;
     background-color: #777;
-    border-style: 1px solid white;
+    color: white;
+    padding: 10px;
+    margin: 10px;
+    border-style: 1px solid #777;
 }
 
-#clearfix::after {
-    content: "";
-    display: block;
-    clear: both;
+h1 {
+    width: 300px;
+    height: 100px;
+    background-color: white;
+    padding: 10px;
+    margin: 10px;
+    border-style: 1px solid #777;
 }
 
 /* I am getting stuck on the boxes in the article.  I know that is has something to do with positioning or display, but I cannot seem to get the code to match the layout image.   */
@@ -77,5 +84,5 @@ footer {
     padding: 15px;
     margin: 10px;
     border-style: 1px solid #777;
-    float: center;
+    clear: both;
 }
